--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="colorDarkGray">#707070</color>
     <color name="colorMediumGray">#C4C4C4</color>
     <color name="colorLightGray">#dbdbdb</color>
+
+    <color name="noColor">#00FF0000</color>
 </resources>
